feat: PDI uri
